syntax = "proto3";

// The greeting service definition(サービスインターフェースの定義).
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    //　responseが複数戻ってくる
    rpc SayHelloServerSideStreaming (HelloRequest) returns (stream HelloReply){}

    // リクエストが複数くる
    rpc SayHelloClientSideStreaming(stream HelloRequest) returns (HelloReply) {};

    // 両方複数くる
    rpc SayHelloStreaming(stream HelloRequest) returns (stream HelloReply) {};

}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
